Fix accessibility of buttons inside Chrome menu

The Cut, Copy, Paste, Zoom In/Out, and Fullscreen
buttons inside the Chrome menu aren't working with
some Windows screen readers.

Fix them by firing the same event (AX_EVENT_SELECTION
internally) and using the same role (AX_ROLE_MENU_ITEM)
for these buttons as for any other items within the
menus.

Internally we consider them to be "buttons", but since
the keyboard behavior is to just linearize them,
from an accessibility perspective it makes more sense
to consider them to just be menu items.

BUG=593392

Review-Url: https://codereview.chromium.org/1982073002
Cr-Commit-Position: refs/heads/master@{#393956}

Former-commit-id: 19211b57d72c9f80763494278659f0b2322a8e75